external-crates/move/crates/move-compiler/tests/move_2024/expansion/macro_identifier_invalid_position.move
module $a::m {}
module $b::m {}
